force-app/main/default/objects/Skill_Session_Participant__c/Skill_Session_Participant__c.object-meta.xml
<CustomObject>
    <label>Skill Session Participant</label>
    <nameField>
        <label>Skill Session Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Session Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>