force-app/main/default/objects/Skill_Session_Participant__c/fields/Is_Participant__c.field-meta.xml
<CustomField>
    <fullName>Is_Participant__c</fullName>
    <formula>Participant__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Participant</label>
    <type>Checkbox</type>
</CustomField>