force-app/main/default/objects/Skill_Session_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Skill Session Participations</relationshipLabel>
    <relationshipName>Skill_Session_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>