force-app/main/default/objects/Skill_Session_Participant__c/fields/Skill_Course_Display__c.field-meta.xml
<CustomField>
    <fullName>Skill_Course_Display__c</fullName>
    <formula>Skill_Session__r.Skill_Course__r.Name</formula>
    <label>Skill Course</label>
    <type>Text</type>
</CustomField>