force-app/main/default/objects/Skill_Session_Participant__c/fields/Skill_Provider_Display__c.field-meta.xml
<CustomField>
    <fullName>Skill_Provider_Display__c</fullName>
    <formula>Skill_Session__r.Skill_Course__r.Skill_Program__r.Skill_Provider__r.Name</formula>
    <label>Skill Provider</label>
    <type>Text</type>
</CustomField>