force-app/main/default/objects/Skill_Session_Participant__c/fields/Skill_Session__c.field-meta.xml
<CustomField>
    <fullName>Skill_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Skill Session</label>
    <referenceTo>Skill_Session__c</referenceTo>
    <relationshipLabel>Skill Session Participants</relationshipLabel>
    <relationshipName>Skill_Session_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>