force-app/main/default/objects/Skill_Session_Participant__c/fields/Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours__c</fullName>
    <formula>Skill_Session__r.Training_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>