force-app/main/default/objects/Skill_Session_Participant__c/validationRules/Must_have_available_seats_to_register.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_available_seats_to_register</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Confirmed&quot;),
  Skill_Session__r.Seats_Open__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>This session has no open seats available.</errorMessage>
</ValidationRule>